Menambahkan style custom

--- a/template.html
+++ b/template.html
@@ -15,15 +15,24 @@
     <link rel="stylesheet" href="css/template.css" />
     <link rel="stylesheet" href="css/leaderboard.css" />
 
+    <!-- Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Forum&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Template</title>
   </head>
   <body>
     <!-- Navbar start -->
     <nav
-      class="navbar fixed-top navbar-expand-md navbar-light bg-white border-bottom"
+      class="navbar fixed-top navbar-expand-md navbar-dark bg-custom border-bottom"
     >
       <div class="container">
-        <a href="#" class="navbar-brand mr-5">Sekolah Skullers</a>
+        <div class="brand d-flex align-items-center mr-5">
+          <!-- <img src="img/logo_sekolah_skullers.png" alt="logo" width="50" /> -->
+          <a href="#" class="navbar-brand p-0">Sekolah<br />Skullers</a>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,7 +53,7 @@
             <a href="#" class="nav-item nav-link mr-md-3 mr-0">View 5</a>
           </div>
           <div class="navbar-nav ml-auto">
-            <a href="#" class="btn btn-primary my-2 my-md-0">Login</a>
+            <a href="#" class="btn btn-custom my-2 my-md-0">Login</a>
           </div>
         </div>
       </div>
