Update template. Memberi font dan tema

--- a/template.html
+++ b/template.html
@@ -25,14 +25,9 @@
   </head>
   <body>
     <!-- Navbar start -->
-    <nav
-      class="navbar fixed-top navbar-expand-md navbar-dark bg-custom border-bottom"
-    >
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-custom">
       <div class="container">
-        <div class="brand d-flex align-items-center mr-5">
-          <!-- <img src="img/logo_sekolah_skullers.png" alt="logo" width="50" /> -->
-          <a href="#" class="navbar-brand p-0">Sekolah<br />Skullers</a>
-        </div>
+        <a href="#" class="navbar-brand mr-5 py-1">Sekolah Skullers</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,14 +41,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="navbar-nav text-center">
-            <a href="#" class="nav-item nav-link mr-md-3 mr-0 active">View 1</a>
-            <a href="#" class="nav-item nav-link mr-md-3 mr-0">View 2</a>
-            <a href="#" class="nav-item nav-link mr-md-3 mr-0">View 3</a>
-            <a href="#" class="nav-item nav-link mr-md-3 mr-0">View 4</a>
-            <a href="#" class="nav-item nav-link mr-md-3 mr-0">View 5</a>
+            <a href="#" class="nav-item nav-link mr-lg-3 mr-0 active">View 1</a>
+            <a href="#" class="nav-item nav-link mr-lg-3 mr-0">View 2</a>
+            <a href="#" class="nav-item nav-link mr-lg-3 mr-0">View 3</a>
+            <a href="#" class="nav-item nav-link mr-lg-3 mr-0">View 4</a>
+            <a href="#" class="nav-item nav-link mr-lg-3 mr-0">View 5</a>
           </div>
           <div class="navbar-nav ml-auto">
-            <a href="#" class="btn btn-custom my-2 my-md-0">Login</a>
+            <a href="#" class="btn btn-custom my-2 my-lg-0">
+              <div class="container justify-content-center p-0">
+                <img
+                  class="icon pr-2"
+                  src="icon/person-circle.svg"
+                  alt="person-circle"
+                />
+                <span>Login</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
