--- a/template.html
+++ b/template.html
@@ -27,7 +27,11 @@
     <!-- Navbar start -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-custom">
       <div class="container">
-        <a href="#" class="navbar-brand mr-5 py-1">Sekolah Skullers</a>
+        <a href="#" class="navbar-brand mr-5 py-1">
+          <h4 class="m-0">
+            Sekolah Skullers
+          </h4></a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -95,6 +99,20 @@
       </table>
     </div>
     <!-- Leaderboard end -->
+
+    <!-- Footer start -->
+    <footer class="p-3">
+      <p class="text-center">&copy; 2020 HMFT-ITB</p>
+      <div class="container d-flex flex-column align-items-center">
+        <a class="pb-3" href="http://hmft.tf.itb.ac.id/">hmft.tf.itb.ac.id</a>
+        <div class="ig d-flex align-items-center p-1">
+          <img src="icon/ig.png" alt="instagram" height="20" />
+          <a href="http://instagram.com/sekolahskullers/">Sekolah Skullers</a>
+          <a href="http://instagram.com/hmft_itb/">HMFT-ITB</a>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer end -->
 
     <!-- Custom Script, jika diperlukan -->
     <script src="js/script.js"></script>
