Menambahkan font piratesbay dan update font forum

--- a/template.html
+++ b/template.html
@@ -15,12 +15,6 @@
     <link rel="stylesheet" href="css/template.css" />
     <link rel="stylesheet" href="css/leaderboard.css" />
 
-    <!-- Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Forum&display=swap"
-      rel="stylesheet"
-    />
-
     <title>Template</title>
   </head>
   <body>
@@ -104,7 +98,7 @@
     <footer class="p-3">
       <p class="text-center">&copy; 2020 HMFT-ITB</p>
       <div class="container d-flex flex-column align-items-center">
-        <a class="pb-3" href="http://hmft.tf.itb.ac.id/">hmft.tf.itb.ac.id</a>
+        <a class="mb-3" href="http://hmft.tf.itb.ac.id/">hmft.tf.itb.ac.id</a>
         <div class="ig d-flex align-items-center p-1">
           <img src="icon/ig.png" alt="instagram" height="20" />
           <a href="http://instagram.com/sekolahskullers/">Sekolah Skullers</a>
