--- a/template.html
+++ b/template.html
@@ -51,37 +51,62 @@
     </nav>
     <!-- Navbar end -->
 
-    <!-- Leaderboard start, sesuaikan dengan konten -->
-    <div class="container leaderboard pt-3">
-      <h2 class="text-center mb-3">Top Members</h2>
-      <table class="table table-sm table-striped table-bordered table-hover">
-        <thead class="text-center">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row" class="text-center">1</th>
-            <td>Mira</td>
-            <td>Syafril</td>
-          </tr>
-          <tr>
-            <th scope="row" class="text-center">2</th>
-            <td>Elbert</td>
-            <td>Timothy</td>
-          </tr>
-          <tr>
-            <th scope="row" class="text-center">3</th>
-            <td>Rifqi</td>
-            <td>Rafian</td>
-          </tr>
-        </tbody>
-      </table>
+    <!-- Profile start, sesuaikan dengan konten -->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Profile Peserta Sekolah Skullers</h1>
+        </div>
+      </div>
+      <div class="row">
+      
+        <div class="col text-center">
+          <div class="card">
+            <img style="border-radius: 50%" src="img/mpkeren1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">mpkeren1</h5>
+              <a href="#" class="btn btn-primary">View Stats</a>
+            </div>
+          </div>
+        </div>
+     
+        <div class="col">
+          <div class="card">
+            <img src="img/mpkeren1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-center">mpkeren2</h5>
+              <p class="card-text">XP:999999</p>
+              <p class="card-text">HP:dying</p>
+            </div>
+          </div>
+        </div>
+ 
+        <div class="col">
+          <div class="card">
+            <img style="border-radius: 50%" src="img/mpkeren2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">mpkeren3</h5>
+              <ul class="list-group list-group-flush">
+          <li class="list-group-item">Quartermaster</li>
+          <li class="list-group-item">XP:999999</li>
+          <li class="list-group-item">HP:0.00001</li>
+        </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
+            <img src="img/mpkeren2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">mpkeren4</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Leaderboard end -->
+    <!-- Profile end -->
 
     <!-- Custom Script, jika diperlukan -->
     <script src="js/script.js"></script>
